# Bachelor-Data-Science-NTNU

./: README.md
IDATT-1001 Programmering 1/Assignment 2/: Flowchart_Øving2_Oppgave1.ccd  Øving2_Oppgave1.java  Øving2_Oppgave2.java
IDATT-1001 Programmering 1/Assignment 3/: Øving3_Oppgave1.java  Øving3_Oppgave1_flowchart.drawio  Øving3_Oppgave2.java
IDATT-2104 Nettverksprogrammering/: Åpne notatblokk.onetoc2
IDATT-2104 Nettverksprogrammering/Assignment_3-IDATT2104/: pom.xml  Åpne notatblokk.onetoc2
IDATT-2105 Full-Stack Applikasjonsutvikling/Assignment_1-IDATT2105/: index.html  package.json  script.js  styles.css  Åpne notatblokk.onetoc2
IDATT-2106 Systemutvikling 2/: Åpne notatblokk.onetoc2
IDATT-2505 Extended Reality/Assignment_1_IDATT2505/: Assignment_1_a_IDATT2505.cpp  Assignment_1_b_IDATT2505.cpp
IDATT-2505 Extended Reality/Assignment_2_IDATT2505/: Assignment_2_2a_IDATT2505.cpp  Assignment_2_2b_IDATT2505.cpp  Assignment_2_3_IDATT2505.cpp  Assignment_2_4_IDATT2505.cpp
IDATT-2505 Extended Reality/Assignment_3_IDATT2505/: Assignment_3_IDATT2505.cpp
IDATT-2506 Applikasjonsutvikling for mobile enheter/Assignment_1_IDATT2506/: settings.gradle.kts
IDATT-2506 Applikasjonsutvikling for mobile enheter/Assignment_2_IDATT2506/: settings.gradle.kts
IDATT-2506 Applikasjonsutvikling for mobile enheter/Assignment_3_IDATT2506/: settings.gradle.kts
INFT-2503 C++/Assignment_4_INFT2503/: CMakeLists.txt  main.cpp  task_1.cpp  task_1.h  task_2.cpp  task_2.h
INFT-2503 C++/Assignment_6_INFT2503/Assignment_6_Task2_INFT2503/: CMakeLists.txt  main.cpp
(+178 files in other folders)
